WindGroup Dev/src/objects/Inventory__c.object
<CustomObject>
    <description>Create to be managed in Procurement process</description>
    <fields>
        <fullName>Available_Qty__c</fullName>
        <formula>In_Qty__c  -  Out_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>In Qty - Out Qty</inlineHelpText>
        <label>Available Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <formula>Stock_Warehouse__r.Default__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Info from related Stock</inlineHelpText>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Qty__c</fullName>
        <inlineHelpText>Roll-up of &apos;In&apos; Qty from related Tracking records</inlineHelpText>
        <label>In Qty</label>
        <summarizedField>Inventory_Tracking__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Inventory_Tracking__c.IN_OUT__c</field>
            <operation>equals</operation>
            <value>In</value>
        </summaryFilterItems>
        <summaryForeignKey>Inventory_Tracking__c.Inventory_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Out_Qty__c</fullName>
        <inlineHelpText>Roll-up of Out Qty from related Tracking records</inlineHelpText>
        <label>Out Qty</label>
        <summarizedField>Inventory_Tracking__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Inventory_Tracking__c.IN_OUT__c</field>
            <operation>equals</operation>
            <value>Out</value>
        </summaryFilterItems>
        <summaryForeignKey>Inventory_Tracking__c.Inventory_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Decription__c</fullName>
        <label>Product Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Item_Catalogue__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>TEXT (Product_Name__r.Product_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From related Product Name</inlineHelpText>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Write Off In-Approval</fullName>
                </value>
                <value>
                    <fullName>Write-off Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse/Store</label>
        <referenceTo>Stock__c</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Write_Off_Qty__c</fullName>
        <label>Write Off Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Write_Off_Remark__c</fullName>
        <label>Write Off Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stock_Warehouse__c</columns>
        <columns>Default__c</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Type__c</columns>
        <columns>Available_Qty__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <recordTypes>
        <fullName>Consumable</fullName>
        <active>true</active>
        <label>Consumable</label>
    </recordTypes>
    <recordTypes>
        <fullName>Equipment</fullName>
        <active>true</active>
        <label>Equipment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>